NMEAParser.js
// Generated from NMEA.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import NMEAListener from './NMEAListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class NMEAParser extends antlr4.Parser {

    static grammarFileName = "NMEA.g4";
    static literalNames = [ null, "'AAM'", "'DBT'", "'GGA'", "' '", "'GLL'", 
                            "'GSA'", "'GSV'", "'HDT'", "'MWV'", "'RMC'", 
                            "'RSA'", "'VHW'", "'VTG'", "'XDR'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, "DEVICE", 
                             "NUMBER", "EMPTY_LINE", "SEP", "SIGN", "SIGNED", 
                             "TIME_STAMP", "CHECKSUM", "LETTERS", "EXPONENT" ];
    static ruleNames = [ "nmea", "sentence", "aam", "dbt", "gga", "gll", 
                         "gsa", "gsv", "hdt", "mwv", "rmc", "rsa", "vhw", 
                         "vtg", "xdr" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = NMEAParser.ruleNames;
        this.literalNames = NMEAParser.literalNames;
        this.symbolicNames = NMEAParser.symbolicNames;
    }



	nmea() {
	    let localctx = new NmeaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, NMEAParser.RULE_nmea);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 34;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===15 || _la===17) {
	            this.state = 32;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 15:
	                this.state = 30;
	                this.sentence();
	                break;
	            case 17:
	                this.state = 31;
	                this.match(NMEAParser.EMPTY_LINE);
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 36;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 37;
	        this.match(NMEAParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sentence() {
	    let localctx = new SentenceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, NMEAParser.RULE_sentence);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 52;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 39;
	            this.aam();
	            break;

	        case 2:
	            this.state = 40;
	            this.dbt();
	            break;

	        case 3:
	            this.state = 41;
	            this.gga();
	            break;

	        case 4:
	            this.state = 42;
	            this.gll();
	            break;

	        case 5:
	            this.state = 43;
	            this.gsa();
	            break;

	        case 6:
	            this.state = 44;
	            this.gsv();
	            break;

	        case 7:
	            this.state = 45;
	            this.hdt();
	            break;

	        case 8:
	            this.state = 46;
	            this.mwv();
	            break;

	        case 9:
	            this.state = 47;
	            this.rmc();
	            break;

	        case 10:
	            this.state = 48;
	            this.rsa();
	            break;

	        case 11:
	            this.state = 49;
	            this.vhw();
	            break;

	        case 12:
	            this.state = 50;
	            this.vtg();
	            break;

	        case 13:
	            this.state = 51;
	            this.xdr();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	aam() {
	    let localctx = new AamContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, NMEAParser.RULE_aam);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 54;
	        this.match(NMEAParser.DEVICE);
	        this.state = 55;
	        this.match(NMEAParser.T__0);
	        this.state = 56;
	        this.match(NMEAParser.SEP);
	        this.state = 60;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===23) {
	            this.state = 57;
	            this.match(NMEAParser.LETTERS);
	            this.state = 62;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 63;
	        this.match(NMEAParser.SEP);
	        this.state = 67;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===23) {
	            this.state = 64;
	            this.match(NMEAParser.LETTERS);
	            this.state = 69;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 70;
	        this.match(NMEAParser.SEP);
	        this.state = 74;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16) {
	            this.state = 71;
	            this.match(NMEAParser.NUMBER);
	            this.state = 76;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 77;
	        this.match(NMEAParser.SEP);
	        this.state = 81;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===23) {
	            this.state = 78;
	            this.match(NMEAParser.LETTERS);
	            this.state = 83;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 84;
	        this.match(NMEAParser.SEP);
	        this.state = 88;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16 || _la===23) {
	            this.state = 85;
	            _la = this._input.LA(1);
	            if(!(_la===16 || _la===23)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 90;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 91;
	        this.match(NMEAParser.CHECKSUM);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	dbt() {
	    let localctx = new DbtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, NMEAParser.RULE_dbt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 93;
	        this.match(NMEAParser.DEVICE);
	        this.state = 94;
	        this.match(NMEAParser.T__1);
	        this.state = 95;
	        this.match(NMEAParser.SEP);
	        this.state = 99;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 18:
	            this.state = 96;
	            this.match(NMEAParser.SEP);
	            break;
	        case 16:
	            this.state = 97;
	            this.match(NMEAParser.NUMBER);
	            this.state = 98;
	            this.match(NMEAParser.SEP);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 101;
	        this.match(NMEAParser.LETTERS);
	        this.state = 102;
	        this.match(NMEAParser.SEP);
	        this.state = 106;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 18:
	            this.state = 103;
	            this.match(NMEAParser.SEP);
	            break;
	        case 16:
	            this.state = 104;
	            this.match(NMEAParser.NUMBER);
	            this.state = 105;
	            this.match(NMEAParser.SEP);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 108;
	        this.match(NMEAParser.LETTERS);
	        this.state = 109;
	        this.match(NMEAParser.SEP);
	        this.state = 113;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 18:
	            this.state = 110;
	            this.match(NMEAParser.SEP);
	            break;
	        case 16:
	            this.state = 111;
	            this.match(NMEAParser.NUMBER);
	            this.state = 112;
	            this.match(NMEAParser.SEP);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 115;
	        this.match(NMEAParser.LETTERS);
	        this.state = 116;
	        this.match(NMEAParser.CHECKSUM);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	gga() {
	    let localctx = new GgaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, NMEAParser.RULE_gga);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 118;
	        this.match(NMEAParser.DEVICE);
	        this.state = 119;
	        this.match(NMEAParser.T__2);
	        this.state = 120;
	        this.match(NMEAParser.SEP);
	        this.state = 124;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16) {
	            this.state = 121;
	            this.match(NMEAParser.NUMBER);
	            this.state = 126;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 127;
	        this.match(NMEAParser.SEP);
	        this.state = 131;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16) {
	            this.state = 128;
	            this.match(NMEAParser.NUMBER);
	            this.state = 133;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 134;
	        this.match(NMEAParser.SEP);
	        this.state = 138;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===23) {
	            this.state = 135;
	            this.match(NMEAParser.LETTERS);
	            this.state = 140;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 141;
	        this.match(NMEAParser.SEP);
	        this.state = 145;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16) {
	            this.state = 142;
	            this.match(NMEAParser.NUMBER);
	            this.state = 147;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 148;
	        this.match(NMEAParser.SEP);
	        this.state = 152;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===23) {
	            this.state = 149;
	            this.match(NMEAParser.LETTERS);
	            this.state = 154;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 155;
	        this.match(NMEAParser.SEP);
	        this.state = 159;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4) {
	            this.state = 156;
	            this.match(NMEAParser.T__3);
	            this.state = 161;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 165;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16) {
	            this.state = 162;
	            this.match(NMEAParser.NUMBER);
	            this.state = 167;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 168;
	        this.match(NMEAParser.SEP);
	        this.state = 172;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16) {
	            this.state = 169;
	            this.match(NMEAParser.NUMBER);
	            this.state = 174;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 175;
	        this.match(NMEAParser.SEP);
	        this.state = 179;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16) {
	            this.state = 176;
	            this.match(NMEAParser.NUMBER);
	            this.state = 181;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 182;
	        this.match(NMEAParser.SEP);
	        this.state = 186;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===19) {
	            this.state = 183;
	            this.match(NMEAParser.SIGN);
	            this.state = 188;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 192;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16) {
	            this.state = 189;
	            this.match(NMEAParser.NUMBER);
	            this.state = 194;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 195;
	        this.match(NMEAParser.SEP);
	        this.state = 196;
	        this.match(NMEAParser.LETTERS);
	        this.state = 197;
	        this.match(NMEAParser.SEP);
	        this.state = 201;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===19) {
	            this.state = 198;
	            this.match(NMEAParser.SIGN);
	            this.state = 203;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 207;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16) {
	            this.state = 204;
	            this.match(NMEAParser.NUMBER);
	            this.state = 209;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 210;
	        this.match(NMEAParser.SEP);
	        this.state = 214;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===23) {
	            this.state = 211;
	            this.match(NMEAParser.LETTERS);
	            this.state = 216;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 218; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 217;
	        		this.match(NMEAParser.SEP);
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 220; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,25, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 226;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,26,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 222;
	                this.match(NMEAParser.NUMBER);
	                this.state = 223;
	                this.match(NMEAParser.SEP); 
	            }
	            this.state = 228;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,26,this._ctx);
	        }

	        this.state = 232;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16 || _la===23) {
	            this.state = 229;
	            _la = this._input.LA(1);
	            if(!(_la===16 || _la===23)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 234;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 238;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===18) {
	            this.state = 235;
	            this.match(NMEAParser.SEP);
	            this.state = 240;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 241;
	        this.match(NMEAParser.CHECKSUM);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	gll() {
	    let localctx = new GllContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, NMEAParser.RULE_gll);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 243;
	        this.match(NMEAParser.DEVICE);
	        this.state = 244;
	        this.match(NMEAParser.T__4);
	        this.state = 245;
	        this.match(NMEAParser.SEP);
	        this.state = 249;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16) {
	            this.state = 246;
	            this.match(NMEAParser.NUMBER);
	            this.state = 251;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 252;
	        this.match(NMEAParser.SEP);
	        this.state = 256;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===23) {
	            this.state = 253;
	            this.match(NMEAParser.LETTERS);
	            this.state = 258;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 259;
	        this.match(NMEAParser.SEP);
	        this.state = 263;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16) {
	            this.state = 260;
	            this.match(NMEAParser.NUMBER);
	            this.state = 265;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 266;
	        this.match(NMEAParser.SEP);
	        this.state = 270;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===23) {
	            this.state = 267;
	            this.match(NMEAParser.LETTERS);
	            this.state = 272;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 273;
	        this.match(NMEAParser.SEP);
	        this.state = 277;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16) {
	            this.state = 274;
	            this.match(NMEAParser.NUMBER);
	            this.state = 279;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 280;
	        this.match(NMEAParser.SEP);
	        this.state = 281;
	        this.match(NMEAParser.LETTERS);
	        this.state = 285;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===18) {
	            this.state = 282;
	            this.match(NMEAParser.SEP);
	            this.state = 287;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 291;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===23) {
	            this.state = 288;
	            this.match(NMEAParser.LETTERS);
	            this.state = 293;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 294;
	        this.match(NMEAParser.CHECKSUM);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	gsa() {
	    let localctx = new GsaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, NMEAParser.RULE_gsa);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 296;
	        this.match(NMEAParser.DEVICE);
	        this.state = 297;
	        this.match(NMEAParser.T__5);
	        this.state = 298;
	        this.match(NMEAParser.SEP);
	        this.state = 299;
	        this.match(NMEAParser.LETTERS);
	        this.state = 300;
	        this.match(NMEAParser.SEP);
	        this.state = 304;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4) {
	            this.state = 301;
	            this.match(NMEAParser.T__3);
	            this.state = 306;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 307;
	        this.match(NMEAParser.NUMBER);
	        this.state = 308;
	        this.match(NMEAParser.SEP);
	        this.state = 318;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4 || _la===16) {
	            this.state = 312;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===4) {
	                this.state = 309;
	                this.match(NMEAParser.T__3);
	                this.state = 314;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 315;
	            this.match(NMEAParser.NUMBER);
	            this.state = 320;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 321;
	        this.match(NMEAParser.SEP);
	        this.state = 331;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4 || _la===16) {
	            this.state = 325;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===4) {
	                this.state = 322;
	                this.match(NMEAParser.T__3);
	                this.state = 327;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 328;
	            this.match(NMEAParser.NUMBER);
	            this.state = 333;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 334;
	        this.match(NMEAParser.SEP);
	        this.state = 344;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4 || _la===16) {
	            this.state = 338;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===4) {
	                this.state = 335;
	                this.match(NMEAParser.T__3);
	                this.state = 340;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 341;
	            this.match(NMEAParser.NUMBER);
	            this.state = 346;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 347;
	        this.match(NMEAParser.SEP);
	        this.state = 357;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4 || _la===16) {
	            this.state = 351;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===4) {
	                this.state = 348;
	                this.match(NMEAParser.T__3);
	                this.state = 353;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 354;
	            this.match(NMEAParser.NUMBER);
	            this.state = 359;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 360;
	        this.match(NMEAParser.SEP);
	        this.state = 370;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4 || _la===16) {
	            this.state = 364;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===4) {
	                this.state = 361;
	                this.match(NMEAParser.T__3);
	                this.state = 366;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 367;
	            this.match(NMEAParser.NUMBER);
	            this.state = 372;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 373;
	        this.match(NMEAParser.SEP);
	        this.state = 383;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4 || _la===16) {
	            this.state = 377;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===4) {
	                this.state = 374;
	                this.match(NMEAParser.T__3);
	                this.state = 379;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 380;
	            this.match(NMEAParser.NUMBER);
	            this.state = 385;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 386;
	        this.match(NMEAParser.SEP);
	        this.state = 396;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4 || _la===16) {
	            this.state = 390;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===4) {
	                this.state = 387;
	                this.match(NMEAParser.T__3);
	                this.state = 392;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 393;
	            this.match(NMEAParser.NUMBER);
	            this.state = 398;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 399;
	        this.match(NMEAParser.SEP);
	        this.state = 409;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4 || _la===16) {
	            this.state = 403;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===4) {
	                this.state = 400;
	                this.match(NMEAParser.T__3);
	                this.state = 405;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 406;
	            this.match(NMEAParser.NUMBER);
	            this.state = 411;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 412;
	        this.match(NMEAParser.SEP);
	        this.state = 422;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4 || _la===16) {
	            this.state = 416;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===4) {
	                this.state = 413;
	                this.match(NMEAParser.T__3);
	                this.state = 418;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 419;
	            this.match(NMEAParser.NUMBER);
	            this.state = 424;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 425;
	        this.match(NMEAParser.SEP);
	        this.state = 435;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4 || _la===16) {
	            this.state = 429;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===4) {
	                this.state = 426;
	                this.match(NMEAParser.T__3);
	                this.state = 431;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 432;
	            this.match(NMEAParser.NUMBER);
	            this.state = 437;
